# Baltam_Starter

./: .gitignore  CMakeLists.txt  README.md  config.json
baltam_sdk/include/bex/: bex.h  bex_config.h  bx_op.h  extern_fcn_type.h
baltam_sdk/lib/: startCmd.bat
examples/: test.m
examples/bmap/: CMakeLists.txt  README.md  config.json
examples/bmap/baltam_sdk/include/: api_macro.h
examples/bmap/baltam_sdk/include/ba_obj/: extern_obj.h
examples/bmap/baltam_sdk/include/bex/: bex.hpp  bex.import.hpp  bex_config.h
examples/bmap/baltam_sdk/lib/: startCmd.bat
examples/bmap/include/: map_tools.hpp  methods.hpp  pluginDataOps.hpp  pluginDataTypes.hpp
examples/bmap/src/: main.cpp  map_tools.cpp  pluginDataOps.cpp  pluginDataTypes.cpp
examples/bmap/src/methods/: map_create.cpp  map_entries.cpp  map_get.cpp  map_keys.cpp  map_remove.cpp  map_set.cpp  map_size.cpp  map_vals.cpp
include/: methods.hpp  pluginDataOps.hpp  pluginDataTypes.hpp
src/: main.cpp  pluginDataOps.cpp  pluginDataTypes.cpp
src/methods/: bv_create.cpp  bv_show.cpp  bv_size.cpp
